@startuml

class Clients {
    - nom: string
    - adreça: string
    - telefon: int
    - email: string
    
    + getNom(): string
    + setNom(nom: string): void
    + getAdreça(): string
    + setAdreça(adreça: string): void
    + getTelefon(): int
    + setTelefon(telefon: int): void
    + getEmail(): string
    + setEmail(email: string): void
}

class Usuaris {
    - login: string
    - contrasenya: string
    - estat: string
    
    + getLogin(): string
    + setLogin(login: string): void
    + getContrasenya(): string
    + setContrasenya(contrasenya: string): void
    + getEstat(): Estat
    + setEstat(estat: Estat): void
}

enum Estat {
    NOU
    ACTIU
    BLOQUEJAT
    BANNEJAT
}

class Carros {
    - id_carro: int
}

class Linies_de_comanda {
    - id_comanda: int
    - quantitat: int
    - preu: float
}

class Productes {
    - id_producte: int
    - nom_producte: string
    - proveidor: string
}

class Factures {
    - id_factura: int
    - adreça_factura: string
    - data_emissio: date
    - data_tancament: date
    - pagament: string 
}

class Ordre_enviaments {
    - id_ordre: int
    - dataComanda: Date
    - dataEnviament: Date
    - destinacio: string
    - import: float
    - estat: string
}

Clients "1" -- "*" Usuaris
Usuaris "1" -- "0..*" Carros 
Carros "1" -- "1" Factures
Carros "1" -- "*" Linies_de_comanda
Linies_de_comanda "1" -- "1" Productes
Factures "1" -- "1" Ordre_enviaments
@enduml